# rust-serde-helpers

./: Cargo.toml  LICENSE  README.md
src/: default.rs  lib.rs  with.rs  xml.rs
src/with/: bool_as_int.rs  date_time.rs  duration.rs
src/xml/: test_utils.rs
